// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <Title__TitleView
      className="ui-title-bar ripple"
      layout={9999}
      style={Object {}}
    >
      <div
        className="ui-title-bar ripple Title__TitleView-ddYmk gnejTR"
        style={Object {}}
      >
        <Title__StyledWidget
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={9999}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={Object {}}
          title="Test label text"
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 1;
",
            ]
          }
        >
          <Label
            className="ui-title Title__StyledWidget-dupbKD bMWgzk"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={Object {}}
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.span
                className="ui-label ui-title Title__StyledWidget-dupbKD bMWgzk"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title Title__StyledWidget-dupbKD bMWgzk sc-bdVaJa iXDktG"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Title__StyledWidget>
      </div>
    </Title__TitleView>
  </ThemeProvider>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <Title__TitleView
      className="ui-title-bar ripple"
      layout={9999}
      style={Object {}}
    >
      <div
        className="ui-title-bar ripple Title__TitleView-ddYmk gnejTR"
        style={Object {}}
      >
        <Title__StyledWidget
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={9999}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={Object {}}
          title="Test label text"
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 1;
",
            ]
          }
        >
          <Label
            className="ui-title Title__StyledWidget-dupbKD bMWgzk"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={Object {}}
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.span
                className="ui-label ui-title Title__StyledWidget-dupbKD bMWgzk"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title Title__StyledWidget-dupbKD bMWgzk sc-bdVaJa iXDktG"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Title__StyledWidget>
      </div>
    </Title__TitleView>
  </ThemeProvider>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple test-class"
    layout={5}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 5;
",
        ]
      }
    />
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={1}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={1}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <Title__StyledWidget
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={1}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={6}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={0}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={0}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <Title__StyledWidget
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={0}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 3;
",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={4}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={4}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    />
    <Title__StyledWidget
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={4}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={3}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={3}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <Title__StyledWidget
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={3}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 2;
",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "optionHoverColor": "#fd7400",
    }
  }
>
  <Title__TitleView
    className="ui-title-bar ripple"
    layout={2}
    style={Object {}}
  >
    <Title__StyledWidget
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={2}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 3;
",
        ]
      }
    />
    <Title__StyledWidget
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={2}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="Test label text"
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</ThemeProvider>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <Title__TitleView
      className="ui-title-bar"
      layout={5}
      style={Object {}}
    >
      <div
        className="ui-title-bar Title__TitleView-ddYmk gnejTR"
        style={Object {}}
      >
        <Title__StyledWidget
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          id=""
          layout={5}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={Object {}}
          title="Test label text"
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 5;
",
            ]
          }
        >
          <Label
            className="ui-title Title__StyledWidget-dupbKD dJeweB"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={Object {}}
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.span
                className="ui-label ui-title Title__StyledWidget-dupbKD dJeweB"
                contentEditable={false}
                disabled={true}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title Title__StyledWidget-dupbKD dJeweB sc-bdVaJa hvSzpL"
                  contentEditable={false}
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Title__StyledWidget>
      </div>
    </Title__TitleView>
  </ThemeProvider>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="Test label text"
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "optionHoverColor": "#fd7400",
      }
    }
  >
    <Title__TitleView
      className="ui-title-bar ripple"
      layout={5}
      style={Object {}}
    >
      <div
        className="ui-title-bar ripple Title__TitleView-ddYmk gnejTR"
        style={Object {}}
      >
        <Title__StyledWidget
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={5}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={Object {}}
          title="Test label text"
          visible={false}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 5;
",
            ]
          }
        >
          <Label
            className="ui-title Title__StyledWidget-dupbKD dJeweB"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={Object {}}
            title="Test label text"
            useedit={false}
            visible={false}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "optionHoverColor": "#fd7400",
                }
              }
            >
              <styled.span
                className="ui-label ui-title Title__StyledWidget-dupbKD dJeweB"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={false}
              >
                <span
                  className="ui-label ui-title Title__StyledWidget-dupbKD dJeweB sc-bdVaJa jiWYIE"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Title__StyledWidget>
      </div>
    </Title__TitleView>
  </ThemeProvider>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;
